fixed analyzer warnings